[FIX] knowledge: fix header icons alignment

--- a/addons/knowledge/static/src/scss/knowledge_frontend.scss
+++ b/addons/knowledge/static/src/scss/knowledge_frontend.scss
@@ -1,10 +1,6 @@
 .o_knowledge_form_view {
     // Header
     // --------------------------------------------------------------------------
-    .o_knowledge_header {
-        cursor: default;
-    }
-
     .o_favorites_toggle_button {
         i.fa-star, i:hover {
             color: #f3cc00;
